Implement displayName and stageParameters of VRDisplay for OpenVRDevice

BUG=712181

Review-Url: https://codereview.chromium.org/2822983002
Cr-Commit-Position: refs/heads/master@{#465657}

Former-commit-id: 4774072a7a9b4b64adb17234eaadc922d1409439